<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.kingdee.ah.pda.ui.view.TitleTopOrdersView
        android:id="@+id/purchase_warehousing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/in_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/purchase_warehousing_title"
        layout="@layout/include_view_scan" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/cts_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_view">

        <TextView
            android:id="@+id/menu1"
            style="@style/mine_fragment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_bottom_black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/menu_1"
            android:lines="1" />
        <TextView
            android:id="@+id/menu2"
            style="@style/mine_fragment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_bottom_black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/menu_4"
            android:lines="1" />

        <TextView
            android:id="@+id/menu3"
            style="@style/mine_fragment"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_bottom_black"
            android:padding="10dp"
            android:text="@string/menu_3"
            android:lines="1" />
    </LinearLayout>

    <com.ajguan.library.EasyRefreshLayout
        android:id="@+id/purchase_order_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/actions_background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cts_1"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/purchase_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.ajguan.library.EasyRefreshLayout>
</android.support.constraint.ConstraintLayout>
